--- a/animalchange/index.html
+++ b/animalchange/index.html
@@ -1,24 +1,43 @@
-<!-- Name: Bob Borsboom
-Student number: 10802975
-Data Processing WK6 -->
-
-
 <!DOCTYPE html>
 
-<div> Name: Bob Borsboom </div>
-<div> Studentnumber: 10802975 </div>
 
 <head>
 
+    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+    <script src="http://d3js.org/queue.v1.min.js"></script>
+    <script src="http://d3js.org/topojson.v1.min.js"></script>
 
-	<title>Animal Change</title>
+    <link rel="stylesheet" type="text/css" href="map.css">
+
+    <script src="map.js"></script>
+
+    <title>Animal Change</title>
+
 
 </head>
 
 
 <body>
 
-</body>
+    <div id="mapdiv">
+         <svg = class= "map"> </svg>
+        </div>
 
+    <div id ="bardiv">
+        <svg class="barchart"> </svg>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+</body>
 
 </html>
