--- a/animalchange/index.html
+++ b/animalchange/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="map.css">
 
     <script src="map.js"></script>
+    <script src="bar.js"></script>
 
     <title>Animal Change</title>
 
@@ -19,6 +20,12 @@
 
 
 <body>
+
+    <div class="slidecontainer">
+        <input type ="range" min ="2000" max="2016" value="2016" class="slider" id="myRange" 
+        onchange="change_year(value)" <textarea> value </textarea> >
+        <textarea> value </textarea>
+        </div>
 
     <div id="mapdiv">
          <svg = class= "map"> </svg>
@@ -32,11 +39,7 @@
 
 
 
-
-
-
-
-
+        
 
 </body>
 
