Map werkt nu goed

--- a/animalchange/index.html
+++ b/animalchange/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-
+<html lang="en">
 
 <head>
+
+    <meta charsrt="utf-8">
+    <!-- for mobile use -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="//d3js.org/d3.v3.min.js"></script>
     <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
     <script src="http://d3js.org/queue.v1.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     <link rel="stylesheet" type="text/css" href="map.css">
 
     <script src="map.js"></script>
     <script src="bar.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <title>Animal Change</title>
 
@@ -21,25 +31,53 @@
 
 <body>
 
-    <div class="slidecontainer">
-        <input type ="range" min ="2000" max="2016" value="2016" class="slider" id="myRange" 
-        onchange="change_year(value)" <textarea> value </textarea> >
-        <textarea> value </textarea>
+    <div class="jumbotron">
+        <h1> KIP KIP TOK TOK </h1>
+    </div>
+
+    <div class="page-header"> </div>
+
+
+
+    <div class="row">
+        <!-- MAP -->
+        <div class="col-sm-6">
+
+            <button type="button" class="btn btn-info">Kippen</button>
+            <button type="button" class="btn btn-info">Kalkoenen</button>
+            <button type="button" class="btn btn-info">Konijnen</button>
+            <button type="button" class="btn btn-info">Varkens</button>
+
+              <!-- SLIDER -->
+            <div class="slidecontainer">
+            <input type ="range" min ="2000" max="2016" value="2000" class="slider" id="myRange" 
+            onchange="change_year(value)">
+            </div>
+
+            <div id="mapdiv">
+             <svg = class= "map"> </svg>
+            </div>
         </div>
 
-    <div id="mapdiv">
-         <svg = class= "map"> </svg>
-        </div>
 
-    <div id ="bardiv">
-        <svg class="barchart"> </svg>
-        </div>
+        <!-- BAR -->
+        <div class="col-sm-6">
 
-
-
-
-
+            <img src="https://www.tutorialspoint.com/r/images/barchart_months_revenue.png" class="img-fluid" alt="W3Schools.com">
         
+             <div id ="bardiv">
+            <svg class="barchart"> </svg>
+            </div>
+
+        </div>
+    </div>
+
+    <div class ="row">
+        <div class="col-sm-12">
+               <img src="http://image.mathcaptain.com/cms/images/113/straight-line-graph.png" class="img-fluid">
+        </div>
+
+    </div>
 
 </body>
 
