--- a/animalchange/index.html
+++ b/animalchange/index.html
@@ -7,9 +7,9 @@
     <!-- for mobile use -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-    <link rel="stylesheet" type="text/css" href="map.css">
-    <link rel="stylesheet" type="text/css" href="bar.css">
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="/code/css/map.css">
+    <link rel="stylesheet" type="text/css" href="/code/css/bar.css">
 
     <script src="//d3js.org/d3.v3.min.js"></script>
     <script src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
@@ -23,9 +23,9 @@
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <script src="bar.js"></script>
-    <script src="line.js"></script>
-    <script src="map.js"></script>
+    <script src="/code/javascript/bar.js"></script>
+    <script src="/code/javascript/line.js"></script>
+    <script src="/code/javascript/map.js"></script>
 
     <title>Animal Change</title>
 
@@ -74,10 +74,6 @@
                 <svg class="barchart"> 
 
                 </svg>
-
-
-
-
             </div>
 
         </div>
