--- a/animalchange/index.html
+++ b/animalchange/index.html
@@ -202,7 +202,7 @@
             <div id="introduction" class="tab-pane fade in active">
 
                     <div id="hokdieren_img">
-                        <img src="../Programmeerproject/hokdieren.jpg" alt="Hokdieren">
+                        <img src="../hokdieren.jpg" alt="Hokdieren">
                     </div>
 
                     <h1> Discussie </h1> 
