--- a/animalchange/index.html
+++ b/animalchange/index.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="/code/css/map.css">
-    <link rel="stylesheet" type="text/css" href="/code/css/bar.css">
-    <link rel="stylesheet" type="text/css" href="/code/css/buttons.css">
-    <link rel="stylesheet" type="text/css" href="/code/css/titles.css">
-    <link rel="stylesheet" type="text/css" href="/code/css/line.css">
-    <link rel="stylesheet" type="text/css" href="/code/css/frontpage.css">
-    <link rel="stylesheet" type="text/css" href="/code/css/slider.css">
+    <link rel="stylesheet" type="text/css" href="../code/css/map.css">
+    <link rel="stylesheet" type="text/css" href="../code/css/bar.css">
+    <link rel="stylesheet" type="text/css" href="../code/css/buttons.css">
+    <link rel="stylesheet" type="text/css" href="../code/css/titles.css">
+    <link rel="stylesheet" type="text/css" href="../code/css/line.css">
+    <link rel="stylesheet" type="text/css" href="../code/css/frontpage.css">
+    <link rel="stylesheet" type="text/css" href="../code/css/slider.css">
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
