--- a/animalchange/index.html
+++ b/animalchange/index.html
@@ -12,13 +12,13 @@
     
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="../code/css/map.css">
-    <link rel="stylesheet" type="text/css" href="../code/css/bar.css">
-    <link rel="stylesheet" type="text/css" href="../code/css/buttons.css">
-    <link rel="stylesheet" type="text/css" href="../code/css/titles.css">
-    <link rel="stylesheet" type="text/css" href="../code/css/line.css">
-    <link rel="stylesheet" type="text/css" href="../code/css/frontpage.css">
-    <link rel="stylesheet" type="text/css" href="../code/css/slider.css">
+    <link rel="stylesheet" type="text/css" href="code/css/map.css">
+    <link rel="stylesheet" type="text/css" href="code/css/bar.css">
+    <link rel="stylesheet" type="text/css" href="code/css/buttons.css">
+    <link rel="stylesheet" type="text/css" href="code/css/titles.css">
+    <link rel="stylesheet" type="text/css" href="code/css/line.css">
+    <link rel="stylesheet" type="text/css" href="code/css/frontpage.css">
+    <link rel="stylesheet" type="text/css" href="code/css/slider.css">
 
     <!-- javascript -->
     <script src="/code/javascript/bar.js"></script>
@@ -55,7 +55,7 @@
         <div class="tab-content">
 
             <!-- tab 2 -->
-            <div id ="visualisation" class="tab-pane fade">
+            <div id ="visualisation" class="tab-pane fade in active">
 
                 <!-- 1st row MAP AND BAR-->
                 <div class="row">
@@ -199,7 +199,7 @@
 
              <!-- tab 1 -->
 
-            <div id="introduction" class="tab-pane fade in active">
+            <div id="introduction" class="tab-pane fade">
 
                     <div id="hokdieren_img">
                         <img src="../hokdieren.jpg" alt="Hokdieren">
