--- a/animalchange/index.html
+++ b/animalchange/index.html
@@ -21,9 +21,9 @@
     <link rel="stylesheet" type="text/css" href="code/css/slider.css">
 
     <!-- javascript -->
-    <script src="/code/javascript/bar.js"></script>
-    <script src="/code/javascript/line.js"></script>
-    <script src="/code/javascript/map.js"></script>
+    <script src="code/javascript/bar.js"></script>
+    <script src="code/javascript/line.js"></script>
+    <script src="code/javascript/map.js"></script>
 
     
 
