--- a/animalchange/index.html
+++ b/animalchange/index.html
@@ -24,7 +24,7 @@
     
 
     <!-- d3-->
-    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
     <script src="https://d3js.org/queue.v1.min.js"></script>
     <script src="https://d3js.org/topojson.v1.min.js"></script>
@@ -204,7 +204,7 @@
             <div id="introduction" class="tab-pane fade">
 
                     <div id="hokdieren_img">
-                        <img src="../hokdieren.jpg" alt="Hokdieren">
+                        <img src="./hokdieren.jpg" alt="Hokdieren">
                     </div>
 
                     <h1> Discussie </h1> 
