--- a/hokdieren NL/index.html
+++ b/hokdieren NL/index.html
@@ -1,3 +1,11 @@
+<!-- /*
+Name: Bob Borsboom
+Student number: 10802975
+Programming project
+
+mapping of the website
+*/ -->
+
 <!DOCTYPE html>
 <html lang="en">
 
